// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dauphin Service buildSearchHeader should build header 1`] = `
{
  "headers": {
    "Referer": "https://agent-dauphin.cget.gouv.fr/referentiel-financement/public/",
    "Referrer-Policy": "strict-origin-when-cross-origin",
    "accept": "application/json, text/plain, */*,application/vnd.mgdis.tiers-3.19.0+json",
    "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
    "authorization": "Bearer FAKE_TOKEN",
    "content-type": "application/json;charset=UTF-8",
    "mg-authentication": "true",
  },
}
`;

exports[`Dauphin Service documents findDauphinInternalId should call httpSpy with args 1`] = `
[
  "https://agent-dauphin.cget.gouv.fr/referentiel-tiers/cget/tiers/search/fullText",
  {
    "facets": {
      "famille": [
        "Association",
      ],
      "status": [
        "SUPPORTED",
      ],
    },
    "from": 0,
    "query": "123456789",
    "size": 1,
    "type": "tiers",
  },
  {
    "headers": {
      "Referer": "https://agent-dauphin.cget.gouv.fr/referentiel-financement/public/",
      "Referrer-Policy": "strict-origin-when-cross-origin",
      "accept": "application/json, text/plain, */*,application/vnd.mgdis.tiers-3.19.0+json",
      "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
      "authorization": "Bearer FAKE_TOKEN",
      "content-type": "application/json;charset=UTF-8",
      "mg-authentication": "true",
    },
  },
]
`;

exports[`Dauphin Service documents getDocuments should call httpSpy with args 1`] = `
[
  "https://agent-dauphin.cget.gouv.fr/referentiel-tiers/cget/tiers/DAUPHIN_ID?expand=pieces.documents",
  {
    "headers": {
      "Referer": "https://agent-dauphin.cget.gouv.fr/referentiel-financement/public/",
      "Referrer-Policy": "strict-origin-when-cross-origin",
      "accept": "application/json, text/plain, */*,application/vnd.mgdis.tiers-3.19.0+json",
      "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
      "authorization": "Bearer FAKE_TOKEN",
      "content-type": "application/json;charset=UTF-8",
      "mg-authentication": "true",
    },
  },
]
`;

exports[`Dauphin Service documents getSpecificDocumentStream should call httpSpy with args 1`] = `
[
  "URL",
  {
    "headers": {
      "Referer": "https://agent-dauphin.cget.gouv.fr/referentiel-financement/public/",
      "Referrer-Policy": "strict-origin-when-cross-origin",
      "accept": "application/json, text/plain, */*, application/vnd.mgdis.tiers-3.19.0+json",
      "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
      "authorization": "Bearer FAKE_TOKEN",
      "mg-authentication": "true",
    },
    "responseType": "stream",
  },
]
`;

exports[`Dauphin Service sendAuthRequest should call httpSpy 1`] = `
[
  "https://agent-dauphin.cget.gouv.fr/account-management/cget-agents/tokens",
  "username=DAUPHIN_USERNAME&password=DAUPHIN_PASSWORD&redirectTo=https%3A%2F%2Fagent-dauphin.cget.gouv.fr%2Fagents%2F%23%2Fcget%2Fhome%3FredirectTo%3Dportal.home",
  {
    "headers": {
      "Referer": "https://agent-dauphin.cget.gouv.fr/account-management/cget-agents/ux/",
      "Referrer-Policy": "strict-origin-when-cross-origin",
      "accept": "application/json, text/plain, */*",
      "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
      "content-type": "application/x-www-form-urlencoded",
    },
  },
]
`;

exports[`Dauphin Service updateApplicationCache should call httpSpy with args 1`] = `
[
  "https://agent-dauphin.cget.gouv.fr/referentiel-financement/api/tenants/cget/demandes-financement/tables/_search",
  {
    "from": 0,
  },
  {
    "headers": {},
  },
]
`;
